--- a/app/src/main/res/layout/trips_activity.xml
+++ b/app/src/main/res/layout/trips_activity.xml
@@ -10,7 +10,7 @@
     tools:context=".activities.TripsActivity">
 
     <ListView
-        android:id="@android:id/list"
+        android:id="@+id/list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
