--- a/app/src/main/res/layout/travel_note_activity.xml
+++ b/app/src/main/res/layout/travel_note_activity.xml
@@ -7,7 +7,6 @@
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:id="@+id/destinationImage"
-        android:src="@drawable/moscow_image"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
@@ -40,7 +39,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/dateOfVisitLabelId"
         android:text="Date of visit:"
-        android:focusable="false"
+        android:focusableInTouchMode="false"
         android:background="@android:color/transparent"
         android:layout_alignBottom="@+id/destinationImage"
         android:layout_toRightOf="@+id/destinationImage"
